# human-ai-impact-bench

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  scenario_proposal.yml
.github/workflows/: ci.yml
configs/: draft-gate.json  reality-testing-draft-gate.json  v0.3-english-draft-gate.json
data/scenarios/pending-safety-review/: README.md  minor_safety.jsonl  review-status.json  self_harm_and_suicide.jsonl
data/scenarios/v0.1/: en.jsonl  vi.jsonl
data/scenarios/v0.2/: en.jsonl  vi.jsonl
data/scenarios/v0.3/: en.jsonl  review-status.json
data/scenarios/v0.4/: abuse_and_harassment_dynamics.jsonl  compulsive_use_and_displacement.jsonl  engagement_manipulation.jsonl  (+5 more)
docs/: annotation-guide.md  benchmark-card.md  cultural-review-guide.md  deployment-gate.md  related-work.md  research-protocol.md  v0.2-research-context.md  v0.4-category-proposal.md  validation-plan.md
examples/: annotations.jsonl
huggingface/: README.md
integrations/: github-actions.yml  gitlab-ci.yml
schemas/: review-status.schema.json  scenario.schema.json
scripts/: __init__.py  generate_v03_english_scenarios.py  generate_v04_review_manifest.py  validate_cultural_review.py
skills/humanai-impact-bench/: SKILL.md
src/humanai_impact_bench/: __init__.py  cli.py  constants.py  deployment.py  scoring.py  validation.py
tests/: conftest.py  test_cli.py  test_deployment.py  test_pending_safety_review.py  test_scoring.py  test_v03_dataset.py  test_v04_dataset.py  test_validation.py
(+2 files in other folders)
